set(network_sources)

list(APPEND network_sources async_buffer.cc)
list(APPEND network_sources client.cc)
list(APPEND network_sources cmd_string.cc)
list(APPEND network_sources cmd.cc)
list(APPEND network_sources common.cc)
list(APPEND network_sources config.cc)
list(APPEND network_sources epoller.cc)
list(APPEND network_sources executor.cc)
list(APPEND network_sources listen_socket.cc)
list(APPEND network_sources net_thread_pool.cc)
list(APPEND network_sources proto_parser.cc)
list(APPEND network_sources server.cc)
list(APPEND network_sources socket.cc)
list(APPEND network_sources stream_socket.cc)
list(APPEND network_sources task_manager.cc)
list(APPEND network_sources thread_pool.cc)
list(APPEND network_sources unbounded_buffer.cc)
list(APPEND network_sources regex.cc)

set(network_sources_INCLUDE_DIR ${network_sources_SOURCE_DIR})

add_library(network ${network_sources})
target_include_directories(network PUBLIC ${network_sources_INCLUDE_DIR})
target_link_libraries(network pmemkv pthread)

# add_executable(pmemkv_redisd pmem_redis.cc)
# target_include_directories(pmemkv_redisd PUBLIC ${pmem_kvredis_INCLUDE_DIR})
# target_link_libraries(pmemkv_redisd pmem_kv_redis pthread pmemkv)
